more front end work

--- a/Symfony/templates/base.html.twig
+++ b/Symfony/templates/base.html.twig
@@ -80,7 +80,7 @@
         </div>
         <div class="backtotop" data-bstsh-object="backToTopManager" ><a href="" data-bstsh-nohist="nohist"><i class="fa fa-arrow-up"></i><span>top</span></a></div>
         <div class="search-end" style="display:none">
-            {{ include( 'ScottDataBundle:Fragment:searchfooter.html.twig') }}
+            {{ include( 'fragment/searchfooter.html.twig') }}
         </div>
         {# ####################### FOCUS SECTION ###################### #}
         <div class="alt-focus-bg"></div>
