less, js started

--- a/Symfony/templates/base.html.twig
+++ b/Symfony/templates/base.html.twig
@@ -23,12 +23,30 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta property="fb:app_id" content="{{ facebook_app_id }}" />
         {{ _meta }}
+
         <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700|Titillium+Web:400,700' rel='stylesheet' type='text/css'>
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
+        {{ encore_entry_script_tags('app') }}
+        <link rel="stylesheet" href="/build/app.css" />
+
+        <script type="text/javascript">
+            document.cred = [];
+            document.cred.facebook_app_id = '{{ facebook_app_id }}';
+            document.cred.google_app_id = '{{ google_app_id }}';
+            document.cred.google_api_key = '{{ google_api_key }}';
+            document.cred.gaq_id = '{{ gaq_id }}';
+            document.cred.fb_login_url = '{{ url("hwi_oauth_service_redirect", {service: "facebook"}) }}';
+        </script>
+
+        <link rel="stylesheet" data-bstsh-object="authCssManager" data-bstsh-anon="/css/anon-user.css" data-bstsh-auth="{{ path('auth_user_style') }}" />
+
+
+
+
+{#
         {% if app.debug %}
             <link rel="stylesheet" href="/css/less/style.php" />
             <script type="text/javascript" src="/js/dev/masonry.pkgd.min.js"></script>
@@ -46,18 +64,9 @@
             <link rel="stylesheet" href="/css/raty/jquery.raty.css" />
             <script type="text/javascript" src="/js/js.js"></script>
         {% endif %}
-        <link rel="stylesheet" data-bstsh-object="authCssManager" data-bstsh-anon="/css/anon-user.css" data-bstsh-auth="{{ path('auth_user_style') }}" />
 
-        <script type="text/javascript">
-            document.cred = [];
-            document.cred.facebook_app_id = '{{ facebook_app_id }}';
-            document.cred.google_app_id = '{{ google_app_id }}';
-            document.cred.google_api_key = '{{ google_api_key }}';
-            document.cred.gaq_id = '{{ gaq_id }}';
-            document.cred.fb_login_url = '{{ url("hwi_oauth_service_redirect", {service: "facebook"}) }}';
-        </script>
+
         <script src="https://apis.google.com/js/client:platform.js" async defer></script>
-
         <script>
               (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -67,6 +76,13 @@
               ga('create', '{{ gaq_id }}', 'booksta.sh');
               ga('send', 'pageview');
         </script>
+#}
+
+
+
+
+
+
     </head>
 {% if app.user.username is defined %}
     <body auth="auth">
