--- a/Symfony/templates/base.html.twig
+++ b/Symfony/templates/base.html.twig
@@ -43,6 +43,16 @@
 
         <link rel="stylesheet" data-bstsh-object="authCssManager" data-bstsh-anon="/css/anon-user.css" data-bstsh-auth="{{ path('auth_user_style') }}" />
 
+        <script src="https://apis.google.com/js/client:platform.js" async defer></script>
+        <script>
+              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+              ga('create', '{{ gaq_id }}', 'auto');
+              ga('send', 'pageview');
+        </script>
 
 
 
@@ -66,16 +76,6 @@
         {% endif %}
 
 
-        <script src="https://apis.google.com/js/client:platform.js" async defer></script>
-        <script>
-              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-              ga('create', '{{ gaq_id }}', 'booksta.sh');
-              ga('send', 'pageview');
-        </script>
 #}
 
 
