--- a/Symfony/assets/css/section/privacy.less
+++ b/Symfony/assets/css/section/privacy.less
@@ -10,6 +10,7 @@ section.privacy{
         margin:10px 20px;
         width:860px;
         color:@slate;
+        padding-bottom:40px;
         h1{
             margin-top:30px;
         }
@@ -19,7 +20,13 @@ section.privacy{
         h3, h4{
             margin-top:10px;
         }
-        padding-bottom:40px;
+        ul{
+            margin-top:10px;
+            li{
+                margin-left:33px;
+                font-size:90%;
+            }
+        }
     }
 }
 
