facebook and generic login working

--- a/Symfony/templates/base.html.twig
+++ b/Symfony/templates/base.html.twig
@@ -24,7 +24,7 @@
         <meta property="fb:app_id" content="{{ facebook_app_id }}" />
         {{ _meta }}
 
-        <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700|Titillium+Web:400,700' rel='stylesheet' type='text/css'>
+        <link href='//fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700|Titillium+Web:400,700' rel='stylesheet' type='text/css'>
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
