--- a/Symfony/templates/email/resetting_email.email.twig
+++ b/Symfony/templates/email/resetting_email.email.twig
@@ -16,5 +16,5 @@ Bookstash
 {% endblock %}
 
 {% block body_html %}
-{% include 'ScottDataBundle:Email:resetting_email.html.twig' %}
+{% include 'email/resetting_email.html.twig' %}
 {% endblock %}
