--- a/Symfony/templates/bundles/FOSUserBundle/Resetting/reset.html.twig
+++ b/Symfony/templates/bundles/FOSUserBundle/Resetting/reset.html.twig
@@ -10,7 +10,7 @@
         <div class="password-reset">
 
             <i class="fa fa-unlock"></i>
-            <h1>Hey {{ user.firstName }},</h1>
+            <h1>Hello there!</h1>
             <h2>Just enter your new password right here and you'll be good to go.</h2>
 
             <form class="password">
@@ -27,7 +27,7 @@
             </form>
 
             <div style="display:none">
-                <form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="fos_user_resetting_reset">
+                <form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" method="POST" class="fos_user_resetting_reset">
                     {{ form_widget(form) }}
                 </form>
                 <a href="/" class="home">booksta.sh</a>
