--- a/Symfony/templates/bundles/FOSUserBundle/Security/login.html.twig
+++ b/Symfony/templates/bundles/FOSUserBundle/Security/login.html.twig
@@ -1,6 +1,6 @@
 
 {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    <div class="error">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
 <form action="{{ path("fos_user_security_check") }}" method="post">
