terms of service

--- a/Symfony/assets/css/style.less
+++ b/Symfony/assets/css/style.less
@@ -900,6 +900,7 @@ body[auth=anon] .trim .dropdowns .menu.user .shell .profile{
     }
 }
 body[hidetrim=hidetrim] .trim,
+body[pagename=tos] .trim,
 body[pagename=privacy] .trim,
 body[pagename=about] .trim,
 body[pagename=admin] .trim,
@@ -1766,6 +1767,7 @@ body {
         @import "section/admin.less";
         @import "section/blog.less";
         @import "section/password.less";
+        @import "section/tos.less";
         @import "section/privacy.less";
         @import "section/test.less";
         @import "section/welcome.less";
