--- a/Symfony/templates/default/aboutmenu.html.twig
+++ b/Symfony/templates/default/aboutmenu.html.twig
@@ -5,4 +5,5 @@
     <a href="{{ path('about') }}">About</a>
     <a href="{{ path('blog') }}">Blog</a>
     <a href="{{ path('privacy') }}">Privacy Policy</a>
+    <a href="{{ path('tos') }}">Terms of Service</a>
 </span>
