google login working

--- a/Symfony/templates/base.html.twig
+++ b/Symfony/templates/base.html.twig
@@ -35,8 +35,7 @@
         <script type="text/javascript">
             document.cred = [];
             document.cred.facebook_app_id = '{{ facebook_app_id }}';
-            document.cred.google_app_id = '{{ google_app_id }}';
-            document.cred.google_api_key = '{{ google_api_key }}';
+            document.cred.google_client_id = '{{ google_client_id }}';
             document.cred.gaq_id = '{{ gaq_id }}';
             document.cred.fb_login_url = '{{ url("hwi_oauth_service_redirect", {service: "facebook"}) }}';
         </script>
