--- a/Symfony/templates/work/work.html.twig
+++ b/Symfony/templates/work/work.html.twig
@@ -381,7 +381,7 @@
             </div>
             <div class="bottom">
                 <div class="delete">
-                    <button class="fakelink reviewdelete" data-url="{{ path('user_delete_review', {'work_id': work.id}) }}"><i class="fa fa-times"></i>Delete Review</button>
+                    <button class="fakelink reviewdelete" data-url="{{ path('user_delete_review', {'work': work.id}) }}"><i class="fa fa-times"></i>Delete Review</button>
                 </div>
                 <span>
                     <div class="flash"></div>
