--- a/Symfony/templates/fragment/stars.html.twig
+++ b/Symfony/templates/fragment/stars.html.twig
@@ -1,9 +1,9 @@
 {% for i in range (1, 5) %}
     {% if count <= i-1 %}
-        <ons-icon icon="fa-star-o"></ons-icon>
+        <i class="fa fa-star-o"></i>
     {% elseif count < i %}
-        <ons-icon icon="fa-star-half-o"></ons-icon>
+        <i class="fa fa-star-half-o"></i>
     {% else %}
-        <ons-icon icon="fa-star"></ons-icon>
+        <i class="fa fa-star"></i>
     {% endif %}
 {% endfor %}
