--- a/Symfony/templates/admin/blog_edit.html.twig
+++ b/Symfony/templates/admin/blog_edit.html.twig
@@ -21,7 +21,7 @@
             </div>
         {% endif %}
 
-        <form method="post" action="{{ path('admin_blog_edit', {'post_id': post.id|default('') }) }}">
+        <form method="post" action="{{ path('admin_blog_edit', {'post': post.id|default('') }) }}">
             <span class="slugomatic">
                 <label>Title:</label>
                 <input type="text" name="title" value="{{ title|default('') }}" class="slugmaster" /><br />
@@ -48,8 +48,8 @@
 
             <div class="control">
                 <input type="submit" name="submit" value="Save" />
-                {% if post is defined %}
-                    <input type="submit" name="submit" value="Preview" data-bstsh-object="previewLauncher" data-url="{{path('admin_blog_preview', {'post_id': post.id})}}" />
+                {% if post.id is defined %}
+                    <input type="submit" name="submit" value="Preview" data-bstsh-object="previewLauncher" data-url="{{path('admin_blog_preview', {'post': post.id})}}" />
                 {% endif %}
                 {% if post.active|default(false) %}
                     <input type="submit" name="submit" value="Unpublish" />
