--- a/Symfony/templates/admin/blog_index.html.twig
+++ b/Symfony/templates/admin/blog_index.html.twig
@@ -6,7 +6,7 @@
 <section class="admin">
 
     <div class="shell">
-        
+
         <nav>
             <a href="{{ path('admin') }}">Top</a> |
             <a href="{{ path('admin_blog_index') }}">Blog Posts</a> |
@@ -19,7 +19,7 @@
             {% for post in posts %}
                 <div class="post">
                     {% if post.active %}
-                        <a href="{{ path('blog_post', {'post_id': post.id, 'slug': post.slug}) }}">{{ post.title }}</a>
+                        <a href="{{ path('blog_post', {'post': post.id, 'slug': post.slug}) }}">{{ post.title }}</a>
                     {% else %}
                         {{ post.title }}
                     {% endif %}
@@ -33,8 +33,8 @@
                         {% else %}
                             <i class="fa fa-eye mute"></i>
                         {% endif %}
-                        <a href="{{ path('admin_blog_edit', {'post_id': post.id }) }}">Edit</a> 
-                        <form method="POST" action="{{ path('admin_blog_delete', {'post_id': post.id }) }}">
+                        <a href="{{ path('admin_blog_edit', {'post': post.id }) }}">Edit</a> 
+                        <form method="POST" action="{{ path('admin_blog_delete', {'post': post.id }) }}">
                             <span class="fauxa" data-bstsh-object="modalGeneral" data-modal-type="confirm" data-headline="Whoa are you sure???" data-subhead="">
                                 <input type="submit" style="display:none" onclick="$(this).parents('form').submit();">Delete
                             </span>
