--- a/Symfony/templates/admin/blog_index.html.twig
+++ b/Symfony/templates/admin/blog_index.html.twig
@@ -10,7 +10,7 @@
         <nav>
             <a href="{{ path('admin') }}">Top</a> |
             <a href="{{ path('admin_blog_index') }}">Blog Posts</a> |
-            <a href="{{ path('admin_blog_create') }}">New Post</a> 
+            <a href="{{ path('admin_blog_create') }}">New Post</a>
         </nav>
         <h1>Admin</h1>
         <h2>All blog posts</h2>
@@ -19,7 +19,7 @@
             {% for post in posts %}
                 <div class="post">
                     {% if post.active %}
-                        <a href="{{ path('blog_post', {'post': post.id, 'slug': post.slug}) }}">{{ post.title }}</a>
+                        <a href="{{ path('blog_post', {'post_id': post.id, 'slug': post.slug}) }}">{{ post.title }}</a>
                     {% else %}
                         {{ post.title }}
                     {% endif %}
