search pages done

--- a/Symfony/templates/search/title_search.html.twig
+++ b/Symfony/templates/search/title_search.html.twig
@@ -21,7 +21,7 @@
                 </div>
             {% endif %}
             {% for work in works %}
-                {{ include( 'search.work.html.twig', { 'work': work }) }}
+                {{ include( 'search/work.html.twig', { 'work': work }) }}
             {% endfor %}
         </div>
 
