some autocomplete on login

--- a/Symfony/templates/base.html.twig
+++ b/Symfony/templates/base.html.twig
@@ -300,13 +300,13 @@
                             <form>
                                 <div class="flash"></div>
                                 <div class="forgot-flash">If you have mislaid your password, we can email you a link to reset it.</div>
-                                <input type="text" name="name" class="field email" placeholder="Email" tabindex="1"><br />
+                                <input type="text" name="name" class="field email" placeholder="Email" tabindex="1" autocomplete="username"><br />
                                 <div class="nag email"><i class="fa fa-arrow-up"></i> Please enter your email address here</div><br />
-                                <input type="text" name="firstname" class="firstname field first" placeholder="First Name" tabindex="2">
-                                <input type="text" name="lastname" class="lastname field last" placeholder="Last Name" tabindex="3"><br />
+                                <input type="text" name="firstname" class="firstname field first" placeholder="First Name" tabindex="2" autocomplete="fname">
+                                <input type="text" name="lastname" class="lastname field last" placeholder="Last Name" tabindex="3" autocomplete="lname"><br />
                                 <div class="nag first"><i class="fa fa-arrow-up"></i> Your First Name</div>
                                 <div class="nag last"><i class="fa fa-arrow-up"></i> Your Last Name</div><br />
-                                <input type="password" name="password" class="field password" placeholder="Password" tabindex="4">
+                                <input type="password" name="password" class="field password" placeholder="Password" tabindex="4" autocomplete="current-password">
                                 <button class="showpass" style="display:none" data-bstsh-object="eventThrower" data-event="bookster:logineyeclick"><i class="fa fa-eye"></i></button><button class="showpass" data-bstsh-object="eventThrower" data-event="bookster:logineyeclick"><i class="fa fa-eye-slash"></i></button><br />
                                 <div class="forgot">
                                     <span data-bstsh-object="eventThrower" data-event="bookster:resetPasswordRequest">(forgot?)</span>
