no results bug fixed

--- a/Symfony/templates/search/title_search.html.twig
+++ b/Symfony/templates/search/title_search.html.twig
@@ -7,7 +7,7 @@
             No books were found with titles similar to "{{ query_raw }}".
         </div>
 
-        {{ include( 'ScottDataBundle:Fragment:searchfooter.html.twig') }}
+        {{ include( 'fragment/searchfooter.html.twig') }}
 
     {% else %}
         <div class="books">
